depl/microservices/k8s/01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: etherscan
  labels:
    role: etherscan-components
---
apiVersion: v1
kind: Namespace
metadata:
  name: etherscan-data
  labels:
    role: etherscan-data
