depl/microservices/k8s/07-etherscan-scanner.yaml
# A headless service which allows pods to discover the number of pods in the 
# stateful set by performing SRV queries.
apiVersion: v1
kind: Service
metadata:
  name: etherscan-scanner-headless
  namespace: etherscan
spec:
  clusterIP: None
  # Include the pprof port to ensure that SRV records are properly generated
  ports:
  - port: 6060
    targetPort: 6060
    name: pprof
  selector:
    app: etherscan-scanner-instance
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: etherscan-scanner-instance
  namespace: etherscan
  labels:
    app: etherscan-scanner-instance
spec:
  serviceName: etherscan-scanner-headless
  selector:
    matchLabels:
      app: etherscan-scanner-instance
  replicas: 2
  template:
    metadata:
      labels:
        app: etherscan-scanner-instance
    spec:
      containers:
      - name: etherscan-scanner
        imagePullPolicy: Always
        image: localhost:5000/etherscan-scanner:latest
        args:
          - "-scanner-num-workers=16"
          - "-tx-graph-api=etherscan-txgraph.etherscan-data:8080"
        ports:
        - containerPort: 6060
          name: pprof
        resources:
          limits:
            cpu: "1"
          requests:
            cpu: 100m
