depl/microservices/k8s/08-etherscan-scorestore.yml
# A service with a cluster IP that serves as a load-balancer for the scorestore.
apiVersion: v1
kind: Service
metadata:
  name: etherscan-scorestore
  namespace: etherscan-data
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    name: grpc
  selector:
    app: etherscan
    component: etherscan-scorestore-instance
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etherscan-scorestore-instance
  namespace: etherscan-data
  labels:
    app: etherscan
    component: etherscan-scorestore-instance
spec:
  selector:
    matchLabels:
      app: etherscan
      component: etherscan-scorestore-instance
  replicas: 1
  template:
    metadata:
      labels:
        app: etherscan
        component: etherscan-scorestore-instance
        role: data-api
    spec:
      containers:
      - name: etherscan-scorestore
        imagePullPolicy: Always
        image: localhost:5000/etherscan-scorestore:latest
        args:
          - "-score-store-uri=postgresql://cdb-cockroachdb-public.etherscan-data:26257/etherscan?sslmode=disable"
        ports:
        - containerPort: 8080
          name: grpc
        - containerPort: 6060
          name: pprof
