depl/microservices/k8s/03-net-policy.yaml
# Drop traffic to etherscan-data from all other namespaces; a separate policy
# will be used to white-list the traffic we do want to allow
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: etherscan-data
  name: deny-from-other-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
---
# Allow all pods in the etherscan namespace (role: etherscan-components) to
# access the score-store and tx-graph APIs but none of the other pods in 
# the etherscan-data namespace
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: etherscan-data
  name: allow-access-to-data-apis
spec:
  podSelector:
    matchLabels:
      role: data-api
  ingress:
  - from:
    - namespaceSelector:
        matchLabels: 
          role: etherscan-components
